themes/editorial/css/main.css
/* ... */
      #menu ul a.opener:before, #menu ul span.opener:before {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: FontAwesome;
        font-style: normal;
        font-weight: normal;
        text-transform: none !important; }
      #menu ul a.opener:before, #menu ul span.opener:before {
        -moz-transition: color 0.2s ease-in-out, -moz-transform 0.2s ease-in-out;
        -webkit-transition: color 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
        -ms-transition: color 0.2s ease-in-out, -ms-transform 0.2s ease-in-out;
        transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
        color: #555;
        content: '\f078';
        position: absolute;
        right: 0; }
      #menu ul a.opener:hover:before, #menu ul span.opener:hover:before {
        color: #e65646; }
      #menu ul a.opener.active + ul, #menu ul span.opener.active + ul {
        display: block; }
      #menu ul a.opener.active:before, #menu ul span.opener.active:before {
        -moz-transform: rotate(-180deg);
        -webkit-transform: rotate(-180deg);
        -ms-transform: rotate(-180deg);
        transform: rotate(-180deg); }

#menu > ul > li {
  margin: 0.5em 0 0 0;
  padding: 0.5em 0 0 0; }
  #menu > ul > li > ul {
    color: #555;
    display: none;
    margin: 0.5em 0 1.5em 0;
    padding-left: 1em; }
    #menu > ul > li > ul a, #menu > ul > li > ul span {
      font-size: 0.8em; }
    #menu > ul > li > ul > li {
      margin: 0.125em 0 0 0;
      padding: 0.125em 0 0 0; }
  #menu > ul > li:first-child {
    border-top: 0;
    margin-top: 0;
    padding-top: 0; }

/*
    Place custom styles here.
*/
ul.tabs {
  display: table-cell;
  padding: 0; }

ul.tabs li {
  cursor: pointer;
  display: block;
  padding: 0 1.5rem;
  line-height: 3rem;
  float: left;
  transition: all 0.18s;
  background-color: #EEE;
  font-weight: bold; }
  ul.tabs li:hover {
    color: #e65646; }

ul.tabs li.current {
  box-shadow: inset 0 -5px 0 #e65646;
  color: #e65646; }

.tab-content {
  display: none; }

.tab-content.current {
  display: inherit; }

/* plan */
table.plan tr {
  border: none; }

table.plan td {
  padding: 0.25em 0.75em; }

.plan--lichyDen {
  background-color: #EEE !important; }

.plan--sudyDen {
  background-color: inherit !important; }

.event--program {
  font-weight: bold; }

/****************
***** HOME ******
****************/
/* home - news */
.newsPictures {
  margin: 1em 0; }

/* home - soon */
#soon {
  padding: 0 1.5rem;
  background-color: #e65646;
  height: 100%;
  position: relative; }
  #soon section {
    padding: 1.5rem;
    margin: 1.5rem;
    position: relative;
    left: 1rem;
    border: 1px dashed black;
    transition: all 0.5s; }
    #soon section.event {
      border: 1px solid black; }
      #soon section.event:hover {
        border: solid white 1px;
        background-color: white;
        transition: all 0.5s; }
      @media screen and (max-width: 736px) {
        #soon section.event {
          border: solid white 1px;
          background-color: white; } }

.soon--date {
  padding-top: 1.5rem; }

.soon-content {
  font-size: 0.9em; }

.soon-title {
  font-size: 1em; }

#soon section > article > ul {
  margin: 0; }

.soon--date-now {
  padding-top: 1.5rem; }

#soon a, #soon a:hover {
  text-decoration: none;
  color: #202020 !important; }

.soon--dot {
  height: 15px;
  width: 15px;
  background-color: #e65646;
  border-radius: 50%;
  display: inline-block;
  top: 3px;
  position: relative;
  border: solid; }

.soon--dot-now {
  background-color: #202020; }

#soon--timeline {
  border: 2px #202020 solid;
  width: 0;
  height: calc(100% - 40px);
  float: left;
  left: 30px;
  margin-top: 40px;
  position: absolute; }

/****************
*** Calendar ****
****************/
table.calendar tr {
  background-color: inherit !important; }

/****************
**** Program ****
****************/
#program tr {
  border: none; }

#filter_program {
  border: #202020 dotted 3px; }

#filter_program label.pure-radio {
  margin: 2px; }

#filter_program fieldset {
  margin: 2.2em 1.1em; }

tr.program--now {
  border: solid #202020 !important;
  border-width: 0.5em 0em !important; }
  tr.program--now td {
    padding: 0; }

/* common */
.click-row {
  cursor: pointer; }
  .click-row:hover {
    background-color: #e65646; }

#nav-links {
  position: relative;
  width: calc(100% - 20em);
  float: right; }
  #nav-links > ul {
    float: right;
    list-style: none;
    margin: 0;
    padding: 0;
    z-index: 5; }
  #nav-links > ul > li {
    background: none;
    float: left;
    position: relative;
    padding: 0; }
    #nav-links > ul > li.hide {
      display: none; }
    #nav-links > ul > li:hover {
      color: #e65646; }
      #nav-links > ul > li:hover ul {
        display: block; }
  #nav-links a {
    color: #333;
    text-decoration: none;
    font-family: Overpass;
    border-bottom: none;
    font-size: 1rem;
    padding: 1rem; }
  #nav-links ul ul {
    background: #EEE;
    display: none;
    list-style: none;
    padding: 0;
    position: fixed;
    right: 0;
    top: 3rem; }
    #nav-links ul ul li {
      padding: 0; }
    #nav-links ul ul a {
      display: block;
      padding: 0 1rem; }

#links-more-btn i {
  padding: 1rem;
  font-size: 1rem;
  position: relative;
  top: -2px; }

#links-more-ul {
  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.2); }

#program .backgroundAccent {
  background-color: #e65646; }

#program td.edit {
  padding: 0; }
  #program td.edit a {
    border-bottom: none;
    display: block;
    padding: 0.75em 0.75em; }
  #program td.edit:hover {
    background-color: #e65646; }
    #program td.edit:hover a {
      color: #333 !important; }

@media screen and (max-width: 1280px) {
  #sidebar, #nav-links {
    opacity: 0; } }

ul.tabs li.group-icon {
  display: none; }
/* ... */

